feat: add connection to keyper

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="ipo"><progress value="90" max="100"></div>
     <div class="panel">
 
-      <div class="recent">Recent</div>
+      <!-- <div class="recent">Recent</div> -->
 
       <canvas id="paper"></canvas>
 
@@ -38,10 +38,12 @@
           <span>Preview</span>
           <div class="color"><span></span></div>
 
+
           <button type="submit" disabled>Submit</button>
         </form>
       </div>
     </div>
+    <div id="account" class="account">Connect to Keyper</div>
   </main>
   <script src="./index.ts"></script>
 </body>
