feat: add snapshot

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,10 @@
         </form>
       </div>
     </div>
+    <div class="history">
+      <div class="history-title">History</div>
+      <div class="history-items" id="history-items"></div>
+    </div>
     <div id="account" class="account">Connect to Keyper</div>
   </main>
   <script src="./index.ts"></script>
