--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,6 @@
           <span>Preview</span>
           <div class="color"><span></span></div>
 
-
           <button type="submit" disabled>Submit</button>
         </form>
       </div>
@@ -49,6 +48,7 @@
     </div>
     <div id="account" class="account">Connect to Keyper</div>
   </main>
+  <dialog id="dialog"> </dialog>
   <script src="./index.ts"></script>
 </body>
 
