--- a/src/index.html
+++ b/src/index.html
@@ -6,37 +6,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CKB Pixels</title>
   <link rel="stylesheet" href="./style.scss" />
+  <link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <main>
+    <h1 class="main-title">Pixel</h1>
     <div class="ipo"><progress value="90" max="100"></div>
     <div class="panel">
-
-      <!-- <div class="recent">Recent</div> -->
 
       <canvas id="paper"></canvas>
 
       <div class="word-bench">
-        <button type="button">Refresh</button>
         <form id="editor" class="editor">
-          <label for="x">X</label>
-          <input type="number" name="x" min="0" max="50" id="x" readonly />
+          <div class="coordinates">
+            <div>
+              <label for="x">X</label>
+              <input type="number" name="x" min="0" max="50" id="x" readonly />
 
-          <label for="y">Y</label>
-          <input type="number" name="y" min="0" max="50" id="y" readonly />
+            </div>
+            <div>
+              <label for="y">Y</label>
+              <input type="number" name="y" min="0" max="50" id="y" readonly />
+            </div>
+          </div>
 
-          <label for="red">Red</label>
-          <input type="range" name="r" min="0" max="255" id="red" />
+          <div class="field">
+            <label for="red">Red</label>
+            <input type="range" name="r" min="0" max="255" id="red" />
+          </div>
 
-          <label for="green">Green</label>
-          <input type="range" name="g" min="0" max="255" id="green" />
+          <div class="field">
+            <label for="green">Green</label>
+            <input type="range" name="g" min="0" max="255" id="green" />
+          </div>
 
-          <label for="blue">Blue</label>
-          <input type="range" name="b" min="0" max="255" id="blue" />
+          <div class="field">
+            <label for="blue">Blue</label>
+            <input type="range" name="b" min="0" max="255" id="blue" />
+          </div>
 
-          <span>Preview</span>
-          <div class="color"><span></span></div>
+          <div class="preview">
+            <span>Preview</span>
+            <div class="color"><span></span></div>
+          </div>
 
           <button type="submit" disabled>Submit</button>
         </form>
@@ -46,7 +59,7 @@
       <div class="history-title">History</div>
       <div class="history-items" id="history-items"></div>
     </div>
-    <div id="account" class="account">Connect to Keyper</div>
+    <!-- <div id="account" class="account">Connect to Keyper</div> -->
   </main>
   <dialog id="dialog"> </dialog>
   <script src="./index.ts"></script>
