refactor: delay local cache for performance

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="initing">
   <main>
     <h1 class="main-title">Pixel</h1>
     <div class="ipo"><progress value="90" max="100"></div>
