feat: enable signing tx by keyper

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CKB Pixels</title>
+  <title>Pixel</title>
   <link rel="stylesheet" href="./style.scss" />
   <link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 </head>
 
-<body class="initing">
+<body>
   <main>
     <h1 class="main-title">Pixel</h1>
     <div class="ipo"><progress value="90" max="100"></div>
@@ -53,13 +53,13 @@
 
           <button type="submit" disabled>Submit</button>
         </form>
+        <button type="button" id="account" class="account">Keyper</button>
       </div>
     </div>
     <div class="history">
       <div class="history-title">History</div>
       <div class="history-items" id="history-items"></div>
     </div>
-    <!-- <div id="account" class="account">Connect to Keyper</div> -->
   </main>
   <dialog id="dialog"> </dialog>
   <script src="./index.ts"></script>
