feat: add nav to cell and addr

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,10 @@
             <span>Preview</span>
             <div class="color"><span></span></div>
           </div>
+          <div class="info">
+            <button type="button" id="cell" disabled>Cell</button>
+            <button type="button" id="owner" disabled>Owner</button>
+          </div>
 
           <button type="submit" disabled>Submit</button>
         </form>
